fix product height on small size

--- a/assets/css/product.scss
+++ b/assets/css/product.scss
@@ -295,21 +295,9 @@ body {
                         }
                     }
                     .art_desc_product_img {
-                        // width: 0 !important;
-                        // display: -webkit-box;
-                        // display: -ms-flexbox;
-                        // display: flex;
-                        // outline: none;
-                        // max-height: 0;
-                        // overflow: hidden;
-                        // &.slick-active {
-                        //     width: 100% !important;
-                        //     max-height: initial;
-                        //     overflow: auto;
-                        // }
                         img {
                             max-width: 100%;
-                            // max-height: 50%;
+                            max-height: 100%;
                         }
                     }
                 }
